<resources>
    <string name="app_name">Stocks</string>
    <string name="stock_symbol">Symbol</string>
    <string name="sample_price_value">8.88</string>
    <string name="company_name">Company Name</string>
    <string name="change_sample_value">0.15</string>
    <string name="change_sample_percent">0.20%</string>
    <string name="latest_source_sample_value">Close:</string>
    <string name="latest_update_sample_value">11:29:19</string>
    <string name="latest_time_sample_value">September 19, 2017</string>
    <string name="primary_exchange_sample_value">Nasdaq Global Select</string>
    <string name="key_statistics">Key Statistics</string>
    <string name="prev_close_title">Prev Close</string>
    <string name="open_title">Open</string>
    <string name="low_title">Low</string>
    <string name="high_title">High</string>
    <string name="_52wk_low_title">52wk Low</string>
    <string name="_52wk_high_title">52wk High</string>
    <string name="market_cap_title">Market Cap</string>
    <string name="volume_title">Volume</string>
    <string name="average_volume_title">Average Volume</string>
    <string name="pe_ratio_title">PE Ratio</string>
    <string name="ytd_change_title">YTD Change</string>
</resources>
